--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
         <spark-core.version>1.6.1</spark-core.version>
         <hazelcast.version>3.7</hazelcast.version>
         <hazelcast-spark.version>0.1</hazelcast-spark.version>
-        <jackson.version>2.6.3</jackson.version>
+        <jackson.version>2.8.3</jackson.version>
     </properties>
     
     <dependencies>
@@ -50,6 +50,10 @@
             <artifactId>jackson-databind</artifactId>
             <version>${jackson.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>         
     </dependencies>
 </project>
