--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,9 @@
         <!-- Library versions -->
         <junit.version>4.12</junit.version>
         <spark-core.version>1.6.1</spark-core.version>
-        <hazelcast.version>3.7</hazelcast.version>
+        <hazelcast.version>3.8</hazelcast.version>
         <hazelcast-spark.version>0.1</hazelcast-spark.version>
+        <hazelcast-jet.version>0.3</hazelcast-jet.version>
         <jackson.version>2.8.4</jackson.version>
     </properties>
     
@@ -38,6 +39,11 @@
             <groupId>com.hazelcast</groupId>
             <artifactId>hazelcast-spark</artifactId>
             <version>${hazelcast-spark.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.hazelcast.jet</groupId>
+            <artifactId>hazelcast-jet-core</artifactId>
+            <version>${hazelcast-jet.version}</version>
         </dependency>
         <!-- Jackson XML Processing -->
         <dependency>
