--- a/pom.xml
+++ b/pom.xml
@@ -11,11 +11,11 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <!-- Library versions -->
         <junit.version>4.12</junit.version>
-        <spark-core.version>1.6.1</spark-core.version>
-        <hazelcast.version>3.8</hazelcast.version>
+        <spark-core.version>2.1.1</spark-core.version>
+        <hazelcast.version>3.8.1</hazelcast.version>
         <hazelcast-spark.version>0.2</hazelcast-spark.version>
-        <hazelcast-jet.version>0.3</hazelcast-jet.version>
-        <jackson.version>2.8.4</jackson.version>
+        <hazelcast-jet.version>0.3.1</hazelcast-jet.version>
+        <jackson.version>2.8.8</jackson.version>
     </properties>
     
     <dependencies>
@@ -27,8 +27,15 @@
         </dependency>
         <dependency>
             <groupId>org.apache.spark</groupId>
-            <artifactId>spark-core_2.10</artifactId>
+            <artifactId>spark-core_2.11</artifactId>
             <version>${spark-core.version}</version>
+            <exclusions>
+                <!-- Use scala-library dependency from hazelcast-spark -->
+                <exclusion>
+                    <groupId>org.scala-lang</groupId>
+                    <artifactId>scala-library</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>com.hazelcast</groupId>
@@ -63,7 +70,7 @@
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.module</groupId>
-            <artifactId>jackson-module-scala_2.10</artifactId>
+            <artifactId>jackson-module-scala_2.11</artifactId>
             <version>${jackson.version}</version>
         </dependency>
         <dependency>
