--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
         <spark-core.version>2.1.1</spark-core.version>
         <hazelcast.version>3.8.1</hazelcast.version>
         <hazelcast-spark.version>0.2</hazelcast-spark.version>
-        <hazelcast-jet.version>0.3.1</hazelcast-jet.version>
+        <hazelcast-jet.version>0.5-SNAPSHOT</hazelcast-jet.version>
         <jackson.version>2.8.8</jackson.version>
     </properties>
     
