--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com</groupId>
     <artifactId>betleopard</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <packaging>jar</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -11,10 +11,10 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <!-- Library versions -->
         <junit.version>4.12</junit.version>
-        <spark-core.version>1.6.1</spark-core.version>
-        <hazelcast.version>3.7</hazelcast.version>
-        <hazelcast-spark.version>0.1</hazelcast-spark.version>
-        <jackson.version>2.8.4</jackson.version>
+        <spark-core.version>2.1.1</spark-core.version>
+        <hazelcast.version>3.9</hazelcast.version>
+        <hazelcast-spark.version>0.2</hazelcast-spark.version>
+        <jackson.version>2.8.8</jackson.version>
     </properties>
     
     <dependencies>
@@ -26,12 +26,24 @@
         </dependency>
         <dependency>
             <groupId>org.apache.spark</groupId>
-            <artifactId>spark-core_2.10</artifactId>
+            <artifactId>spark-core_2.11</artifactId>
             <version>${spark-core.version}</version>
+            <exclusions>
+                <!-- Use scala-library dependency from hazelcast-spark -->
+                <exclusion>
+                    <groupId>org.scala-lang</groupId>
+                    <artifactId>scala-library</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>com.hazelcast</groupId>
             <artifactId>hazelcast</artifactId>
+            <version>${hazelcast.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.hazelcast</groupId>
+            <artifactId>hazelcast-client</artifactId>
             <version>${hazelcast.version}</version>
         </dependency>
         <dependency>
@@ -52,7 +64,7 @@
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.module</groupId>
-            <artifactId>jackson-module-scala_2.10</artifactId>
+            <artifactId>jackson-module-scala_2.11</artifactId>
             <version>${jackson.version}</version>
         </dependency>
         <dependency>
